# polariscloud

./: .env  .env.example  .gitignore  DIRECTORY_STRUCTURE.md  README.md  README_RESOURCES.md  create_migrations.py  macOs.md  polaris-installer.sh  pyproject.toml  requirements.txt  setup.py  setup.py.bak  system_info.json  test.py  test_gpu_detection.py  uninstall_polaris.sh  user_info.json
archive/: .env.example  README.md  easyinstall.md  install_polaris.sh
archive/compute_subnet/: test_api.py
archive/polaris_cli/: bittensor_miner.py  cli.py  repo_manager.py
archive/src/: ssh_manager.py  system_info.py
config/: package-lock.json
config/polaris_user_config/: network_config.json
config/polaris_user_config/bittensor/: config.json
dependency_files/: development.txt  production.txt
docs/: .scraper_cache.json  README.md  bittensor_subnet_resources.md  bittensor_subnet_resources.py  celium_scraper.py  get_subnet_resources.sh  technical.md  validator.md
polaris_cli/: bittensor_miner.py  bulletproof.py  cli.py  heartbeat_service.py  log_monitor.py  network_handler.py  register.py  repo_manager.py  start.py
polaris_cli_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: install.sh  uninstall.sh
src/: config.py  main.py  ngrok_manager.py  pid_manager.py  ssh_manager.py  system_info.json  system_info.py  user_manager.py  utils.py
src/polaris/: __init__.py
src/polaris_cli_tool.egg-info/: PKG-INFO
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_miner.py
tests/unit/: __init__.py  test_config.py
validator/: README.md
(+24 files in other folders)
